--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "git-parser",
   "version": "1.0.0",
-  "description": ".git parser",
+  "description": ".git parser without git cli",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
