--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
-  }
+  },
+  "dependencies": {}
 }
